Aktualizacja danych + odnośnik do FB

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#about" class="menu-btn">O mnie</a></li>
                 <li><a href="#services" class="menu-btn">Usługi</a></li>
                 <li><a href="#skills" class="menu-btn">Umiejętności</a></li>
-                <li><a href="galeria/galeria.html" class="menu-btn">Galeria</a></li>
+                <li><a href="galeria.html" class="menu-btn">Galeria</a></li>
                 <li><a href="#contact" class="menu-btn">Kontakt</a></li>
             </ul>
             <div class="menu-btn">
@@ -72,8 +72,13 @@
                 </div>
                 <div class="column right">
                     <div class="text">Jestem Marysia i jestem <span class="typing"></span></div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat vitae blanditiis tenetur officiis quaerat at odit hic. Iure corporis alias, soluta nemo ratione repellendus optio excepturi accusantium in architecto! Inventore.</p>
-                    <a href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź osobiście</a>
+                    <p>Ale najważniejsze, jestem sobą! <br>
+                        Mój mały świat jest trochę chaotyczny bo łączy wiele różnych pasji. Chcę się nimi z Tobą podzielić pokazując Ci świat widziany moimi oczami <span> 👀 </span><br><br>
+                        Moimi głównymi pasjami jest fotografia oraz grafika. Zmysł artystyczny przekładam również na różnego rodzaju prace ręczne, rysowanie, malowanie oraz różnego rodzaju ozdoby z żywicy. <br><br>
+                        Fotografia jest dla mnie magią i to w niej kocham. Pozwala zatrzymać tak ulotne wyjątkowe chwile, a jednocześnie daje możliwość przeniesienia się choć na chwilę do innego świata. <br><br>
+                        Zapraszam Cię do zostania ze mną przez chwilę, a na pewno stworzymy razem coś wspaniałego <span> 😊 </span></p>
+                    <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak97"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
             </div>
         </div>
@@ -155,7 +160,8 @@
                 <div class="column left">
                     <div class="text">Moje umiejętności i doświadczenie</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam deleniti perferendis consequatur architecto maiores velit ad ea consequuntur dolores, officiis, possimus cum, commodi amet a beatae repellat et obcaecati.</p>
-                    <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA==" ><i class="fa-brands fa-instagram"></i> Odwiedź mojego Instagrama</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak97"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -243,7 +249,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Dane kontaktowe</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis expedita aliquid rerum nihil ex dolorum quas inventore consequatur ad distinctio officiis impedit, qui sint ipsa ducimus aspernatur dolore aliquam natus?</p>
+                    <p>W wszystkich sprawach możesz do mnie pisać na podane niżej maile (możesz użyć formularzu) lub za pośrednictwem portali społecznościowych. </p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -255,7 +261,7 @@
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
-                                <div class="head">Adres</div>
+                                <div class="head">Lokalizacja</div>
                                 <div class="sub-title">Poznań</div>
                             </div>
                         </div>
@@ -263,6 +269,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">E-mail</div>
+                                <div class="sub-title">mariakapsiak97@gmail.com</div>
                                 <div class="sub-title">kontakt@mariakapsiak.pl</div>
                             </div>
                         </div>
@@ -301,7 +308,7 @@
                                 <i class="fas fa-calendar"></i>
                             </div>
                             <div class="textarea">
-                                <textarea name="message" placeholder="Krótka notka o wizji sesji zdjęciowej"></textarea>
+                                <textarea name="message" placeholder="Treść Twojej wiadomości"></textarea>
                                 <i class="material-icons">message</i>
                             </div>
                             <div class="button-area">
