--- a/sesje/index.html
+++ b/sesje/index.html
@@ -78,7 +78,7 @@
                         Fotografia jest dla mnie magią i to w niej kocham. Pozwala zatrzymać tak ulotne wyjątkowe chwile, a jednocześnie daje możliwość przeniesienia się choć na chwilę do innego świata. <br><br>
                         Zapraszam Cię do zostania ze mną przez chwilę, a na pewno stworzymy razem coś wspaniałego <span> 😊 </span></p>
                     <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG</a>
-                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak97"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
                     <div class="text">Moje umiejętności i doświadczenie</div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam deleniti perferendis consequatur architecto maiores velit ad ea consequuntur dolores, officiis, possimus cum, commodi amet a beatae repellat et obcaecati.</p>
                     <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG</a>
-                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak97"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
