--- a/sesje/index.html
+++ b/sesje/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Maria Kapsiak Fotografia</title>
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="rekwizyty/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -68,7 +68,7 @@
             <h2 class="title">O mnie</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="profilowe.jpg" alt="Zdjęcie profilowe">
+                    <img src="rekwizyty/profilowe.jpg" alt="Zdjęcie profilowe">
                 </div>
                 <div class="column right">
                     <div class="text">Jestem Marysia i jestem <span class="typing"></span></div>
@@ -200,6 +200,11 @@
                         <div class="line fifth"></div>
                     </div>
                 </div>
+
+
+                <ul class="skills-what">
+                    <li>Zachowaj wyjątkowe chwile i wspomniana na zawsze dzięki wyjątkowym zdjęciom. Oferuję również fotografię produktową by Twoja firma mogła wzrastać.</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -209,32 +214,32 @@
         <div class="max-width">
             <h2 class="title">Przykładowe zdjęcia</h2>
             <div class="hand">
-                <img src="hand.gif">
+                <img src="rekwizyty/hand.gif">
             </div>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="example1.png" alt="">
+                        <img src="rekwizyty/example1.png" alt="">
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="example2.png" alt="">
+                        <img src="rekwizyty/example2.png" alt="">
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="example3.png" alt="">
+                        <img src="rekwizyty/example3.png" alt="">
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="example4.png" alt="">
+                        <img src="rekwizyty/example4.png" alt="">
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="example5.png" alt="">
+                        <img src="rekwizyty/example5.png" alt="">
                     </div>
                 </div>
             </div>
