--- a/sesje/index.html
+++ b/sesje/index.html
@@ -203,7 +203,11 @@
 
 
                 <ul class="skills-what">
-                    <li>Zachowaj wyjątkowe chwile i wspomniana na zawsze dzięki wyjątkowym zdjęciom. Oferuję również fotografię produktową by Twoja firma mogła wzrastać.</li>
+                    <li id="what1">Zachowaj wyjątkowe chwile i wspomniana na zawsze dzięki wyjątkowym zdjęciom. Oferuję również fotografię produktową by Twoja firma mogła wzrastać.</li>
+                    <li id="what2">Stwórzmy razem Twój własny wyjątkowy film ze wspomnieniami lub film reklamowy.</li>
+                    <li id="what3">Zadbajmy o wyjątkowy i niepowtarzalny wizerunek Twojej marki. Wyróżnij się na rynku oryginalnym wyglądem.</li>
+                    <li id="what4">Stworzę dla Ciebie stronę internetową idealnie dopasowaną do Ciebie, Twoich potrzeb oraz przyjazną dla Twojego odbiorcy.</li>
+                    <li id="what5">Zadbam o Twój wizerunek w mediach społecznościowych. Poprowadzę dla Ciebie Facebooka oraz Instagrama.</li>
                 </ul>
             </div>
         </div>
