Dodanie Co mogę zrobić i ustawienie (w trakcie)

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -164,7 +164,7 @@
                     <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
                 <div class="column right">
-                    <div class="bars">
+                    <!-- <div class="bars">
                         <div class="info">
                             <span>Komunikatywność</span>
                             <span>90%</span>
@@ -198,17 +198,57 @@
                             <span>95%</span>
                         </div>
                         <div class="line fifth"></div>
+                    </div> -->
+<!--  -->
+                    <div class="skill">
+                        <div class="picture">
+                            <img src="rekwizyty/CoMogeZrobic1.png" alt="Co mogę dla Ciebie zrobić zdjęcie 1">
+                        </div>
+                        <div class="description">
+                            <p>Zachowaj wyjątkowe chwile i wspomniana na zawsze dzięki wyjątkowym zdjęciom. Oferuję również fotografię produktową by Twoja firma mogła wzrastać.</p>
+                        </div>
                     </div>
+                    <div class="skill">
+                        <div class="picture">
+                            <img src="rekwizyty/CoMogeZrobic2.png" alt="Co mogę dla Ciebie zrobić zdjęcie 2">
+                        </div>
+                        <div class="description">
+                            <p>Stwórzmy razem Twój własny wyjątkowy film ze wspomnieniami lub film reklamowy.</p>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="picture">
+                            <img src="rekwizyty/CoMogeZrobic3.png" alt="Co mogę dla Ciebie zrobić zdjęcie 3">
+                        </div>
+                        <div class="description">
+                            <p>Zadbajmy o wyjątkowy i niepowtarzalny wizerunek Twojej marki. Wyróżnij się na rynku oryginalnym wyglądem.</p>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="picture">
+                            <img src="rekwizyty/CoMogeZrobic4.png" alt="Co mogę dla Ciebie zrobić zdjęcie 4">
+                        </div>
+                        <div class="description">
+                            <p>Stworzę dla Ciebie stronę internetową idealnie dopasowaną do Ciebie, Twoich potrzeb oraz przyjazną dla Twojego odbiorcy.</p>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="picture">
+                            <img src="rekwizyty/CoMogeZrobic5.png" alt="Co mogę dla Ciebie zrobić zdjęcie 5">
+                        </div>
+                        <div class="description">
+                            <p>Zadbam o Twój wizerunek w mediach społecznościowych. Poprowadzę dla Ciebie Facebooka oraz Instagrama.</p>
+                        </div>
+                    </div>
+                    
+
                 </div>
 
 
-                <ul class="skills-what">
-                    <li id="what1">Zachowaj wyjątkowe chwile i wspomniana na zawsze dzięki wyjątkowym zdjęciom. Oferuję również fotografię produktową by Twoja firma mogła wzrastać.</li>
-                    <li id="what2">Stwórzmy razem Twój własny wyjątkowy film ze wspomnieniami lub film reklamowy.</li>
-                    <li id="what3">Zadbajmy o wyjątkowy i niepowtarzalny wizerunek Twojej marki. Wyróżnij się na rynku oryginalnym wyglądem.</li>
-                    <li id="what4">Stworzę dla Ciebie stronę internetową idealnie dopasowaną do Ciebie, Twoich potrzeb oraz przyjazną dla Twojego odbiorcy.</li>
-                    <li id="what5">Zadbam o Twój wizerunek w mediach społecznościowych. Poprowadzę dla Ciebie Facebooka oraz Instagrama.</li>
-                </ul>
+
+
+
+<!--  -->
             </div>
         </div>
     </section>
