Poprawne skalowanie seksji Usług

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -92,7 +92,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-camera"></i>
-                        <div class="text">Sesja Standardowa</div>
+                        <div class="text">Sesja Standard</div>
                         <ul class="sub-points">
                             <li>Wyjątkowa pamiątka na lata</li>
                             <li>Niesamowite doświadczenie</li>
@@ -111,7 +111,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fa-solid fa-wand-magic-sparkles"></i>
-                        <div class="text">Sesja Bajkowa</div>
+                        <div class="text">Sesja Bajka</div>
                         <ul class="sub-points">
                             <li>Magiczny klimat sesji</li>
                             <li>Niepowtarzalna pamiątka na lata</li>
@@ -132,7 +132,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fa-solid fa-mug-saucer"></i>
-                        <div class="text">Sesja Produktowa</div>
+                        <div class="text">Sesja Produkt</div>
                         <ul class="sub-points">
                             <li>Profesjonalne zdjęcia produktowe</li>
                             <li>Odpowiednio dobrana stylistyka scenerii</li>
@@ -159,7 +159,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Moje umiejętności i doświadczenie</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam deleniti perferendis consequatur architecto maiores velit ad ea consequuntur dolores, officiis, possimus cum, commodi amet a beatae repellat et obcaecati.</p>
+                    <p>W tym zawodzie dużo bardziej trzeba wykazać się niż w innych takmi umiejętnościami jak umiejętności techniczne obejmujące fotografię cyfrową i analogową, znajomość strategii marketingowych, zarządzanie projektami i oczywiście kreatywność.</p>
                     <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG&nbsp</a>
                     <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
@@ -245,16 +245,7 @@
                             </div>
                         </div>
                     </div>
-                    
-                    
-
                 </div>
-
-
-
-
-
-<!--  -->
             </div>
         </div>
     </section>
