Dodanie kalendarza i formularza Google

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -164,42 +164,6 @@
                     <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
                 <div class="column right">
-                    <!-- <div class="bars">
-                        <div class="info">
-                            <span>Komunikatywność</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line first"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Spontaniczność</span>
-                            <span>65%</span>
-                        </div>
-                        <div class="line second"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Praca światłem</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line thirth"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Cierpliwość</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line fourth"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Potrzeba rozwoju</span>
-                            <span>95%</span>
-                        </div>
-                        <div class="line fifth"></div>
-                    </div> -->
-<!--  -->
                     <div class="right-top">
                         <div class="skill">
                             <div class="picture">
@@ -319,6 +283,12 @@
             <h2 class="title">Zapytaj o wolne terminy</h2>
             <div class="contact-content">
                 <div class="column left">
+                    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&mode=MONTH&showNav=1&showDate=1&showPrint=0&showTabs=1&showCalendars=0&title=Wolne%20terminy%20sesji%20zdj%C4%99ciowej&src=a29udGFrdEBtYXJpYWthcHNpYWsucGw&color=%2333B679" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf23nmNLrHcY2rVhoyKyDQneHdx9HuQkEG9Cw5Tteq-dQbsjA/viewform?embedded=true" width="200%" height="640" frameborder="1000" marginheight="0" marginwidth="0">Ładuję…</iframe>
+
+                    
+                </div>
+                <div class="column right">
                     <div class="text">Dane kontaktowe</div>
                     <p>W wszystkich sprawach możesz do mnie pisać na podane niżej maile (możesz użyć formularzu) lub za pośrednictwem portali społecznościowych. </p>
                     <div class="icons">
@@ -345,13 +315,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="column right">
-                    <div class="text">Skontaktuj się ze mną poprzez formularz poniżej <br> lub wybierz termin online w 
-                        <a href="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&showCalendars=0&showTabs=0&showPrint=0&title=Terminarz&mode=WEEK&src=a29udGFrdEBwaG90b2dyYXBoZXJvbGFhLnBs&color=%23349e69">kalendarzu Google 
-                            <i class="fas fa-calendar-alt"></i>
-                        </a>
-                    </div>
+                    <br><br>
+                    <div class="text"> Jeśli chcesz zaproponować własny termin to pisz tutaj</div>
                     <div class="explanation">
                         <div class="tooltip">
                             <i class="fa-regular fa-circle-question"></i>
