Poprawki z kalendarzem i formularzem

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -283,12 +283,18 @@
             <h2 class="title">Zapytaj o wolne terminy</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&mode=MONTH&showNav=1&showDate=1&showPrint=0&showTabs=1&showCalendars=0&title=Wolne%20terminy%20sesji%20zdj%C4%99ciowej&src=a29udGFrdEBtYXJpYWthcHNpYWsucGw&color=%2333B679" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf23nmNLrHcY2rVhoyKyDQneHdx9HuQkEG9Cw5Tteq-dQbsjA/viewform?embedded=true" width="200%" height="640" frameborder="1000" marginheight="0" marginwidth="0">Ładuję…</iframe>
-
+                    <div>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf23nmNLrHcY2rVhoyKyDQneHdx9HuQkEG9Cw5Tteq-dQbsjA/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Ładuję…</iframe>
+                    </div>    
                     
                 </div>
+
+                <!-- Prawa kolumna -->
                 <div class="column right">
+                    <div>
+                        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&mode=MONTH&showNav=1&showDate=1&showPrint=0&showTabs=1&showCalendars=0&title=Wolne%20terminy%20sesji%20zdj%C4%99ciowej&src=a29udGFrdEBtYXJpYWthcHNpYWsucGw&color=%2333B679" style="border-width:0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+                    </div>
+
                     <div class="text">Dane kontaktowe</div>
                     <p>W wszystkich sprawach możesz do mnie pisać na podane niżej maile (możesz użyć formularzu) lub za pośrednictwem portali społecznościowych. </p>
                     <div class="icons">
@@ -316,6 +322,8 @@
                         </div>
                     </div>
                     <br><br>
+
+                    <!-- Terminarz -->
                     <div class="text"> Jeśli chcesz zaproponować własny termin to pisz tutaj</div>
                     <div class="explanation">
                         <div class="tooltip">
