--- a/sesje/index.html
+++ b/sesje/index.html
@@ -283,15 +283,14 @@
             <h2 class="title">Zapytaj o wolne terminy</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div>
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf23nmNLrHcY2rVhoyKyDQneHdx9HuQkEG9Cw5Tteq-dQbsjA/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Ładuję…</iframe>
+                    <div class="Gform">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf23nmNLrHcY2rVhoyKyDQneHdx9HuQkEG9Cw5Tteq-dQbsjA/viewform?embedded=true" scrolling="no">Ładuję…</iframe>
                     </div>    
-                    
                 </div>
 
                 <!-- Prawa kolumna -->
                 <div class="column right">
-                    <div>
+                    <div class="Gcalendar">
                         <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&mode=MONTH&showNav=1&showDate=1&showPrint=0&showTabs=1&showCalendars=0&title=Wolne%20terminy%20sesji%20zdj%C4%99ciowej&src=a29udGFrdEBtYXJpYWthcHNpYWsucGw&color=%2333B679" style="border-width:0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
                     </div>
 
