Poprawki skalowania formularza

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -284,7 +284,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="Gform">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf23nmNLrHcY2rVhoyKyDQneHdx9HuQkEG9Cw5Tteq-dQbsjA/viewform?embedded=true" scrolling="no">Ładuję…</iframe>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf23nmNLrHcY2rVhoyKyDQneHdx9HuQkEG9Cw5Tteq-dQbsjA/viewform?embedded=true" frameborder="0" scrolling="no">Ładuję…</iframe>
                     </div>    
                 </div>
 
