Prawie poprawne skalowanie wszystkiego

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -291,7 +291,7 @@
                 <!-- Prawa kolumna -->
                 <div class="column right">
                     <div class="Gcalendar">
-                        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&mode=MONTH&showNav=1&showDate=1&showPrint=0&showTabs=1&showCalendars=0&title=Wolne%20terminy%20sesji%20zdj%C4%99ciowej&src=a29udGFrdEBtYXJpYWthcHNpYWsucGw&color=%2333B679" style="border-width:0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+                        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23349e69&ctz=Europe%2FWarsaw&mode=MONTH&showNav=1&showDate=1&showPrint=0&showTabs=1&showCalendars=0&title=Wolne%20terminy%20sesji%20zdj%C4%99ciowej&src=a29udGFrdEBtYXJpYWthcHNpYWsucGw&color=%2333B679" frameborder="0" scrolling="no"></iframe>
                     </div>
 
                     <div class="text">Dane kontaktowe</div>
@@ -323,11 +323,11 @@
                     <br><br>
 
                     <!-- Terminarz -->
-                    <div class="text"> Jeśli chcesz zaproponować własny termin to pisz tutaj</div>
+                    <div class="text"> Jeśli chcesz zaproponować termin to wypełnij tutaj</div>
                     <div class="explanation">
                         <div class="tooltip">
                             <i class="fa-regular fa-circle-question"></i>
-                            <span class="tooltiptext"><b>Formularz</b>- kontakt mailowy poprzez który ustalamy dogodny dla nas termin <br><br><b>Kelendarz Google</b>- kontakt poprzez konto Google <i>(wymagane zalogowanie się do swojego konta Google)</i> i potwierdzenie mailem ze 100% pewnością wybranego terminu</span>
+                            <span class="tooltiptext"><b>Formularz po prawej stronie</b>- kontakt mailowy poprzez który ustalamy dogodny dla nas termin <br><br><b>Formularz po lewej stronie</b>- kontakt przy pomocy kalendarza Google z moimi standardowymi terminami <i>(logowanie do konta nie jest wymagane)</i></span>
                         </div>
                         <i class="fa-solid fa-arrow-left"></i>
                         wyjaśnienie rónicy
