Ostatnie zmiany bezpośrednio na hostingu

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#about" class="menu-btn">O mnie</a></li>
                 <li><a href="#services" class="menu-btn">Usługi</a></li>
                 <li><a href="#skills" class="menu-btn">Umiejętności</a></li>
-                <li><a href="galeria.html" class="menu-btn">Galeria</a></li>
+                <li><a href="galeria.php" class="menu-btn">Galeria</a></li>
                 <li><a href="#contact" class="menu-btn">Kontakt</a></li>
             </ul>
             <div class="menu-btn">
