--- a/sesje/index.html
+++ b/sesje/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Maria Kapsiak Fotografia</title>
     <link href="rekwizyty/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
@@ -77,7 +77,7 @@
                         Moimi głównymi pasjami jest fotografia oraz grafika. Zmysł artystyczny przekładam również na różnego rodzaju prace ręczne, rysowanie, malowanie oraz różnego rodzaju ozdoby z żywicy. <br><br>
                         Fotografia jest dla mnie magią i to w niej kocham. Pozwala zatrzymać tak ulotne wyjątkowe chwile, a jednocześnie daje możliwość przeniesienia się choć na chwilę do innego świata. <br><br>
                         Zapraszam Cię do zostania ze mną przez chwilę, a na pewno stworzymy razem coś wspaniałego <span> 😊 </span></p>
-                    <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG&nbsp</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/kapsiakowe.fotki/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG&nbsp</a>
                     <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                 <div class="column left">
                     <div class="text">Moje umiejętności i doświadczenie</div>
                     <p>W tym zawodzie dużo bardziej trzeba wykazać się niż w innych takmi umiejętnościami jak umiejętności techniczne obejmujące fotografię cyfrową i analogową, znajomość strategii marketingowych, zarządzanie projektami i oczywiście kreatywność.</p>
-                    <a target="_blank" rel="noopener noreferrer" href="https://instagram.com/mariakapsiak.foto?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG&nbsp</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/kapsiakowe.fotki/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG&nbsp</a>
                     <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
                 <div class="column right">
@@ -371,7 +371,7 @@
      </footer>
 
     <script src="script_strona_glowna.js"></script>
-    <script src="script_wiadomosc.js"></script>
+    <script src="formularz/script_wiadomosc.js"></script>
 
 </body>
 </html>
