Poprawienie udostępniania i dodanie komentarzy

--- a/sesje/index.html
+++ b/sesje/index.html
@@ -78,7 +78,7 @@
                         Fotografia jest dla mnie magią i to w niej kocham. Pozwala zatrzymać tak ulotne wyjątkowe chwile, a jednocześnie daje możliwość przeniesienia się choć na chwilę do innego świata. <br><br>
                         Zapraszam Cię do zostania ze mną przez chwilę, a na pewno stworzymy razem coś wspaniałego <span> 😊 </span></p>
                     <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/kapsiakowe.fotki/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG&nbsp</a>
-                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/kapsiakowe.fotki"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
                     <div class="text">Moje umiejętności i doświadczenie</div>
                     <p>W tym zawodzie dużo bardziej trzeba wykazać się niż w innych takmi umiejętnościami jak umiejętności techniczne obejmujące fotografię cyfrową i analogową, znajomość strategii marketingowych, zarządzanie projektami i oczywiście kreatywność.</p>
                     <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/kapsiakowe.fotki/?utm_source=ig_web_button_share_sheet&igshid=ZDNlZDc0MzIxNw=="><i class="fa-brands fa-instagram"></i> Sprawdź mnie na IG&nbsp</a>
-                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/mariakapsiak.foto"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/kapsiakowe.fotki"><i class="fa-brands fa-square-facebook"></i> Sprawdź mnie na FB</a>
                 </div>
                 <div class="column right">
                     <div class="right-top">
