--- a/sesje/zarzadzanie/logowanie/login.html
+++ b/sesje/zarzadzanie/logowanie/login.html
@@ -21,7 +21,7 @@
                 <i class="fa-solid fa-key"></i>
             </div>
             <div class="forgot">
-                <a href="#">Zapomniałam hasła</a>
+                <!--<a href="#">Zapomniałam hasła</a>-->
             </div>
             <input type="submit" value="Zaloguj" class="btn"/>
             <div class="homepage">
